--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -2,6 +2,9 @@
    Custom style overrides for Lei Lei
    ===================================== */
 
+/* TEST FLAG */
+body { outline: 3px solid magenta !important; }
+
 /* --- Make the main content area wider --- */
 .page__content {
   max-width: 1200px;   /* default ~750px */
