--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,7 +9,7 @@
  */
 
 @import
-    "settings",
+    
     "vendor/breakpoint/breakpoint",
 
     "themes",
@@ -40,5 +40,6 @@
 
     "vendor/font-awesome/fontawesome",
     "vendor/font-awesome/solid",
-    "vendor/font-awesome/brands"
+    "vendor/font-awesome/brands",
+    "settings"
 ;
