--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -40,6 +40,5 @@
 
     "vendor/font-awesome/fontawesome",
     "vendor/font-awesome/solid",
-    "vendor/font-awesome/brands",
-    "settings"
+    "vendor/font-awesome/brands"
 ;
